--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ## Custom files
 *.bat
-*.pdf
+*.yaml
+*.html
+*.cmd
+.npmrc
 ## --------------------
 
 # Created by https://www.gitignore.io/api/java,gradle,windows,intellij+all,visualstudiocode
